# data-platform

./: .env.example  .gitignore  README.md  architecture.drawio  pyproject.toml
.github/workflows/: ci.yml
dbt/: dbt_project.yml  profiles.yml
dbt/data_platform/: dbt_project.yml
dbt/macros/: setup_minio.sql
dbt/models/marts/: dim_company.sql  fact_daily_prices.sql  fact_earnings.sql  schema.yml
dbt/models/staging/: stg_earnings.sql  stg_overview.sql  stg_prices.sql
docker/: Dockerfile.pipeline  Dockerfile.superset  docker-compose.yml  superset_init.sh
docker/flows/: data_platform_pipeline.yml  main_data_platform_pipeline.yml
ingestion/: config.py  exploration.ipynb  main.py
ingestion/extractors/: earnings.py  overview.py  prices.py
ingestion/loaders/: minio_loader.py
ingestion/transformers/: __init__.py  earnings.py  overview.py  prices.py
tests/fixtures/: generate_fixtures.py
warehouse/: duckbd_minio_connection.ipynb  explore_duckdb.ipynb  minio_connection.ipynb
